--- a/20251019/index.html
+++ b/20251019/index.html
@@ -286,14 +286,14 @@
                             <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.24 2.24 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.3 6.3 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5"/>
                         </svg>
                         <h3 class="font-semibold">出遊成員</h3>
-                        <p class="text-xs text-gray-300 mt-1">13人</p>
+                        <p class="text-xs text-gray-300 mt-1">14人</p>
                     </div>
                     <div class="nav-card bg-white/10 backdrop-blur-md rounded-xl p-4 text-center cursor-pointer hover:bg-white/20 transition-all" onclick="showPage('schedule-page')">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-calendar-event-fill mx-auto mb-2 text-blue-400" viewBox="0 0 16 16">
                             <path d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v1h16V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4zM16 14V5H0v9a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2m-3.5-7h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5"/>
                         </svg>
                         <h3 class="font-semibold">行程總覽</h3>
-                        <p class="text-xs text-gray-300 mt-1">1日行程</p>
+                        <p class="text-xs text-gray-300 mt-1">快樂溯溪</p>
                     </div>
                     <div class="nav-card bg-white/10 backdrop-blur-md rounded-xl p-4 text-center cursor-pointer hover:bg-white/20 transition-all" onclick="showPage('checklist-page')">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-card-checklist mx-auto mb-2 text-yellow-400" viewBox="0 0 16 16">
@@ -307,7 +307,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-water mx-auto mb-2 text-cyan-400" viewBox="0 0 16 16">
                             <path d="M8 16a6 6 0 0 0 6-6c0-1.655-1.122-2.904-2.432-4.362C10.254 4.176 8.75 2.503 8 0c0 0-6 5.686-6 10a6 6 0 0 0 6 6M6.646 4.646l.708.708c-.29.29-1.128 1.311-1.907 2.87l-.894-.448c.85-1.702 1.803-2.838 2.093-3.13"/>
                         </svg>
-                        <h3 class="font-semibold">裝備店家</h3>
+                        <h3 class="font-semibold">相關資訊</h3>
                         <p class="text-xs text-gray-300 mt-1">資訊</p>
                     </div>
                     <div class="nav-card bg-white/10 backdrop-blur-md rounded-xl p-4 text-center cursor-pointer hover:bg-white/20 transition-all" onclick="showPage('transport-page')">
@@ -348,7 +348,7 @@
             <main class="w-full max-w-lg mx-auto">
                 <header class="text-center my-8">
                     <h1 class="text-3xl font-bold tracking-tight nature-title text-shadow-lg">大鬼瀑布溯溪指南</h1>
-                    <p class="text-gray-300 mt-2">新手友善 · 9:00-17:00 一日行程</p>
+                    <p class="text-gray-300 mt-2">新手友善 · 9:00-17:00 快樂溯溪</p>
                 </header>
 
                 <!-- 路線概覽 -->
@@ -556,7 +556,7 @@
                                 </div>
                                 <div class="flex items-center p-2 bg-white/10 rounded-lg">
                                     <div class="w-6 h-6 bg-indigo-500 rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">領</div>
-                                    <span>領導</span>
+                                    <span>婕淩</span>
                                 </div>
                             </div>
                         </div>
@@ -611,6 +611,22 @@
                             </div>
                         </div>
 
+                        <!-- 4號車 -->
+                        <div class="mb-6 p-4 bg-gradient-to-r from-purple-500/20 to-pink-500/20 rounded-xl border border-purple-400/30">
+                            <div class="flex items-center mb-3">
+                                <div class="w-10 h-10 bg-purple-500 rounded-full flex items-center justify-center text-white font-bold mr-3">4</div>
+                                <div>
+                                    <h3 class="text-lg font-semibold text-purple-300">4號車 (竹北)</h3>
+                                    <p class="text-sm text-gray-300">1人</p>
+                                </div>
+                            </div>
+                            <div class="grid grid-cols-2 gap-2 text-sm">
+                                <div class="flex items-center p-2 bg-white/10 rounded-lg">
+                                    <div class="w-6 h-6 bg-purple-500 rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">4</div>
+                                    <span>4號</span>
+                                </div>
+                            </div>
+                        </div>
 
                         <div class="mt-6 pt-4 border-t border-white/20">
                             <div class="flex items-center text-amber-300">
@@ -662,8 +678,8 @@
                                 <span class="text-sm">Iris</span>
                             </div>
                             <div class="bg-white/10 rounded-lg p-3">
-                                <img src="https://i.postimg.cc/zXr26Ktw/2025-09-30-142810.png" alt="領導" class="w-16 h-16 rounded-full mx-auto mb-2 object-cover border-2 border-white/20">
-                                <span class="text-sm">領導</span>
+                                <img src="https://i.postimg.cc/zXr26Ktw/2025-09-30-142810.png" alt="婕淩" class="w-16 h-16 rounded-full mx-auto mb-2 object-cover border-2 border-white/20">
+                                <span class="text-sm">婕淩</span>
                             </div>
                             <div class="bg-white/10 rounded-lg p-3">
                                 <img src="https://i.postimg.cc/xT2phMxt/2025-09-30-142818.png" alt="柏鈞" class="w-16 h-16 rounded-full mx-auto mb-2 object-cover border-2 border-white/20">
@@ -693,6 +709,10 @@
                                 <img src="https://i.postimg.cc/tgMQ0kYH/2025-09-30-150912.png" alt="Emily" class="w-16 h-16 rounded-full mx-auto mb-2 object-cover border-2 border-white/20">
                                 <span class="text-sm">Emily</span>
                             </div>
+                            <div class="bg-white/10 rounded-lg p-3">
+                                <img src="https://i.postimg.cc/65Grr6CC/2025-10-01-135605.png" alt="4號" class="w-16 h-16 rounded-full mx-auto mb-2 object-cover border-2 border-white/20">
+                                <span class="text-sm">4號</span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -706,7 +726,7 @@
             <main class="w-full max-w-lg mx-auto">
                 <header class="text-center my-8">
                     <h1 class="text-3xl font-bold tracking-tight nature-title text-shadow-lg">行程總覽</h1>
-                    <p class="text-gray-300 mt-2">1日精彩行程</p>
+                    <p class="text-gray-300 mt-2">大鬼瀑布快樂溯溪</p>
                 </header>
             
                 <!-- 行程區塊容器 -->
@@ -822,6 +842,10 @@
                                 </label>
                                 <label class="checklist-item flex items-center space-x-3 cursor-pointer rounded-lg p-2">
                                     <input type="checkbox" class="w-5 h-5 text-green-600 bg-gray-700 border-gray-600 rounded focus:ring-green-500 focus:ring-2">
+                                    <span class="text-sm">潛水用面鏡</span>
+                                </label>
+                                <label class="checklist-item flex items-center space-x-3 cursor-pointer rounded-lg p-2">
+                                    <input type="checkbox" class="w-5 h-5 text-green-600 bg-gray-700 border-gray-600 rounded focus:ring-green-500 focus:ring-2">
                                     <span class="text-sm">快乾衣褲 (長袖長褲)</span>
                                 </label>
                                 <label class="checklist-item flex items-center space-x-3 cursor-pointer rounded-lg p-2">
@@ -869,6 +893,10 @@
                                 <label class="checklist-item flex items-center space-x-3 cursor-pointer rounded-lg p-2">
                                     <input type="checkbox" class="w-5 h-5 text-green-600 bg-gray-700 border-gray-600 rounded focus:ring-green-500 focus:ring-2">
                                     <span class="text-sm">輕食 / 能量棒(午餐)</span>
+                                </label>
+                                <label class="checklist-item flex items-center space-x-3 cursor-pointer rounded-lg p-2">
+                                    <input type="checkbox" class="w-5 h-5 text-green-600 bg-gray-700 border-gray-600 rounded focus:ring-green-500 focus:ring-2">
+                                    <span class="text-sm">防曬</span>
                                 </label>
                             </div>
                         </div>
