--- a/20251019/index.html
+++ b/20251019/index.html
@@ -1093,17 +1093,17 @@
             <!-- 圖片放大彈出視窗 -->
             <div id="image-modal" class="fixed inset-0 z-50 hidden opacity-0 transition-opacity duration-300">
                 <div class="fixed inset-0 bg-black/80 backdrop-blur-sm" id="image-overlay"></div>
-                <div class="fixed inset-0 flex items-center justify-center p-4">
-                    <div class="bg-white/95 backdrop-blur-md rounded-2xl shadow-2xl max-w-4xl w-full max-h-[90vh] overflow-hidden">
-                        <div class="flex items-center justify-between p-4 border-b border-gray-200">
+                <div class="fixed inset-0 flex items-center justify-center p-2 sm:p-4">
+                    <div class="bg-white/95 backdrop-blur-md rounded-2xl shadow-2xl max-w-4xl w-full max-h-[95vh] sm:max-h-[90vh] overflow-hidden mx-auto">
+                        <div class="flex items-center justify-between p-3 sm:p-4 border-b border-gray-200">
                             <h3 class="text-lg font-bold text-gray-800">保險資訊</h3>
-                            <button id="close-image-modal" class="text-gray-500 hover:text-gray-700 transition-colors">
+                            <button id="close-image-modal" class="text-gray-500 hover:text-gray-700 transition-colors p-1">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
                                     <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
                                 </svg>
                             </button>
                         </div>
-                        <div class="p-4 overflow-y-auto max-h-[calc(90vh-80px)]">
+                        <div class="p-3 sm:p-4 overflow-y-auto max-h-[calc(95vh-60px)] sm:max-h-[calc(90vh-80px)]">
                             <div class="text-center">
                                 <img id="modal-image" src="" alt="保險資訊" class="w-full h-auto rounded-lg shadow-lg mx-auto">
                                 <p class="text-sm text-gray-600 mt-4">點擊圖片可放大查看</p>
